--- a/resumemanagement.client/src/global.scss
+++ b/resumemanagement.client/src/global.scss
@@ -38,6 +38,7 @@ ul {
 .app {
   color: var(--text-color1);
   background-color: var(--bg-color);
+  transition: all 0.5s ease-in-out;
 
   &.dark {
     --bg-color: #000;
