Добавление Route, axios

--- a/resumemanagement.client/src/components/navbar/navbar.scss
+++ b/resumemanagement.client/src/components/navbar/navbar.scss
@@ -9,6 +9,7 @@
   padding: 0 2rem;
 
   .brand {
+    flex: 1;
   }
 
   .menu {
@@ -31,8 +32,47 @@
 
   .toggle {
     cursor: pointer;
+    margin-left: 1rem;
     svg {
-        color: var(--blue);
+      color: var(--blue);
+    }
+  }
+}
+
+@media (max-width: 600px) {
+  .navbar {
+    padding: 0 1rem;
+
+    .menu {
+      @include d-Flex(column, flex-start, center);
+      gap: 1rem;
+      color: #fff;
+      background-color: rgb(52, 51, 51);
+      width: 240px;
+      height: 100vh;
+      position: fixed;
+      top: 0;
+      left: -240px;
+      z-index: 100;
+      transition: all 0.5s ease-in-out;
+      ul {
+        @include d-Flex(column, center, center);
+        gap: 2rem;
+        height: 100%;
+        li {
+          a {
+            color: #fff;
+            cursor: pointer;
+          }
+        }
+      }
+      &.open {
+        left: 0;
+      }
+    }
+
+    .hamburger {
+      display: block;
     }
   }
 }
